src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AM_Next_action_Date__c</fullName>
        <label>AM Next action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Management_Remarks__c</fullName>
        <label>Account Management Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Management_Status__c</fullName>
        <label>Account Management Status</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Soft Copy Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC for Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadblock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File returned to Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Out Possession In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Out Possession Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Mobile_Number__c</fullName>
        <formula>Account.PersonContact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Project_Validation__c</fullName>
        <formula>IF( ISPICKVAL(Status__c , &apos;Active&apos;) , AccountId + Project__c , AccountId + Project__c + Id   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Project Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Date_Of_Registration__c</fullName>
        <label>Actual Date Of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Date_of_Loan_Sanction__c</fullName>
        <label>Actual Date of Loan Sanction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_For_Registration__c</fullName>
        <label>Address For Registration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adhoc_Exception_Comments__c</fullName>
        <label>Adhoc Exception Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adhoc_Exception_Status__c</fullName>
        <label>Adhoc Exception Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adhoc_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhoc Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Date_of_Birth__c ) ) , 
IF( DATE( 2000 , MONTH( Date_of_Birth__c ) , DAY( Date_of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR ( Date_of_Birth__c ), 
YEAR (Today()) - YEAR ( Date_of_Birth__c ) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Handover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Handover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Serial_Number__c</fullName>
        <label>Agreement Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Value_Balance__c</fullName>
        <formula>Agreement_Value__c -  Flatcost_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Value Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approvals_for_deviations_if_any_are_at__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approvals For Deviations (If Any) Are At</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected__c</fullName>
        <label>Approved/Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Architectural_Change_Comments__c</fullName>
        <label>Architectural Change Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architectural_Change_Status__c</fullName>
        <label>Architectural Change Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Architectural_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Architectural Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Association_Membership_Type__c</fullName>
        <label>Association Membership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_By_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attended By Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BM_Case_Status__c</fullName>
        <label>BM Case Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BM_Interaction_Date__c</fullName>
        <label>BM Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BM_Next_Action_Date__c</fullName>
        <label>BM Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_Self_Funded__c</fullName>
        <label>Bank Loan/Self Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_Stage__c</fullName>
        <label>Bank Loan Stage</label>
        <picklist>
            <controllingField>Bank_Loan_Self_Funded__c</controllingField>
            <picklistValues>
                <fullName>Additional clarity from client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD and bank credit review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned - Awaiting 1st disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned - Developer documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned - Loan paper execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanction in process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect with client &amp; Assign Banker</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need help to apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_RM_Contact_Number__c</fullName>
        <label>Bank RM Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_RM_Email__c</fullName>
        <label>Bank RM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bank_RM__c</fullName>
        <label>Bank RM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banking_Remarks__c</fullName>
        <label>Banking Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banking_Status__c</fullName>
        <label>Banking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Documents Collection WIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadblock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan from self source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Attended_By_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Attended By Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Channel_Partner_Contact_Number__c</fullName>
        <formula>Booking_Channel_Partner__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Channel Partner Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Channel_Partner_Email__c</fullName>
        <label>Booking Channel Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Booking_Channel_Partner_Name__c</fullName>
        <label>Booking Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Channel_Partner_Phone__c</fullName>
        <label>Booking Channel Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Booking_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Opportunities (Booking Channel Partner)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Detailed_Sub_Source__c</fullName>
        <label>Booking Detailed Sub Source</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Existing Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Employee_Id__c</fullName>
        <label>Booking Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Employee_Name__c</fullName>
        <label>Booking Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Existing_Channel_Partner_Email__c</fullName>
        <formula>Walk_in_Channel_Partner__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Existing Channel Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Mobile_of_Refree__c</fullName>
        <label>Booking Mobile of Refree</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Booking_Name_of_Refree__c</fullName>
        <label>Booking Name of Refree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Reference_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Reference Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities (Booking Reference Lead)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Respective_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Respective Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Booking Respective Customer Account)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Source__c</fullName>
        <label>Booking Source</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Sub_Source__c</fullName>
        <label>Booking Sub Source</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Tie Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_amount_cheque_details_Bank_Na__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking Amount, Cheque Details &amp; Bank Na</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_in_Source_Remarks__c</fullName>
        <label>Booking in Source Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Old</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Site_Visit_In_Lacs__c</fullName>
        <label>Budget-Site Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Salaried__c</fullName>
        <label>Business/Salaried</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAM_charges_society_and_other_charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Charges, Society and Other Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_Reference_booking_details_mentioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking Source Detail Mention Correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Comments__c</fullName>
        <label>CRM Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Next_Action_Date__c</fullName>
        <label>RM Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Team_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Team Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Call Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_time_Preference__c</fullName>
        <label>Call Time Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Initiation_Record__c</fullName>
        <label>Cancellation Initiation Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Remarks__c</fullName>
        <label>Cancellation Remarks (System)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default on Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Post booking Pre-confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Post confirmation Pre-registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Post Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>AM Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Channel_Partner__c</referenceTo>
        <relationshipLabel>Opportunities (Channel Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheque_DD_UTR_No__c</fullName>
        <label>Cheque/DD/UTR No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_No_c__c</fullName>
        <label>Cheque/DD/UTR No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bapatla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bheemunipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobbili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuddapah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanamkonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaggaiahpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammalamadugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandukur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kavali</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Loan_Status__c</fullName>
        <label>Client Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Self-Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Loan_Sub_Status__c</fullName>
        <label>Client Loan Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Fin Assist – To get in touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Fin Assist – Pre-sanction works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned- Awaiting PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned-Client documents pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned-Radius documents pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanction-Client Self Contribution pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned-Agreement pending (Client Hold Up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned-Agreement pending (Radius Hold Up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible for Loan-IT not filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible for Loan-CIBIL Rating issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible for Loan-income insufficient</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Owner2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Co Owner2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Owner3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Co Owner3)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>BLUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>Amount * 2  / 100</formula>
        <label>Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name_And_Number__c</fullName>
        <label>Contact Person Name And Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Booking_Source_mentioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Booking Source Mentioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_Booking_date_and_consideration_v__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Booking Date and Consideration v</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_sheet_attached_signed_by_applican__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Sheet Attached &amp; Signed by Applican</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>